--- a/apim.yml
+++ b/apim.yml
@@ -29,6 +29,13 @@ stages:
       pool:
         vmImage: 'ubuntu-latest'
       steps:
+        - task: DownloadBuildArtifacts@0
+          inputs:
+            buildType: 'current'
+            downloadType: 'single'
+            artifactName: 'drop'
+            downloadPath: '$(Pipeline.Workspace)/drop'
+
         - task: AzureFunctionApp@1
           inputs:
             azureSubscription: 'apim'
